<resources>
    <string name="app_name">activity practice</string>
    <string name="file_access">File Access</string>
    <string name="loaded_content">loaded content</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="scroll_view">Scroll view</string>
    <string name="sliding_drawer">Sliding drawer</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="menus_and_dialogs">Menu &amp; Dialog</string>
    <string name="auto_complete">Auto complete</string>
    <string name="bar_ex">Bar Ex</string>
    <string name="view_container">View Container</string>
    <string name="view_flipper">View Flipper</string>
    <string name="draw_ex">Draw Ex</string>
    <string name="interactive_activity">Interactive Activity</string>

    <string name="custom_dialog">Custom dialog</string>

    <!--  message  -->
    <string name="success_save">Save was successful.</string>
    <string name="load_file_error">An error occurred while loading the file.</string>
    <string name="opened_in_activity">Opened in \'%1$s\'.</string>
    <string name="input_text_content">Input content: \'%1$s\'.</string>
</resources>