<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainMaterialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMaterialToolbar">

        <Button
            android:id="@+id/buttonFileAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_access" />

        <Button
            android:id="@+id/buttonDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time" />

        <Button
            android:id="@+id/buttonMenusAndDialogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menus_and_dialogs" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>