<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DateAndTimeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbarDateAndTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/date_and_time" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbarDateAndTime">

        <Chronometer
            android:id="@+id/chronometerDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:format="time taken\n%s"
            android:gravity="center"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonDateAndTimeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/date" />

            <RadioButton
                android:id="@+id/radioButtonDateAndTimeTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />
        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CalendarView
                android:id="@+id/calendarViewDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TimePicker
                android:id="@+id/timePickerDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="invisible" />

        </FrameLayout>

        <Button
            android:id="@+id/buttonDateAndTimeSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>